# bromath

./: .gitignore  CMakeLists.txt  README.md
include/bromath/: aabb.h  angle.h  bromath.h  color.h  curves.h  frustum.h  grid.h  hash.h  mat.h  plane.h  quat.h  ray.h  rng.h  scalar.h  segment.h  smoother.h  spatial_hash.h  sphere.h  transform.h  vec.h
tests/: CMakeLists.txt  test_color_curves.cpp  test_framework.h  test_frustum.cpp  test_geom.cpp  test_main.cpp  test_mat.cpp  test_quat.cpp  test_rng_hash.cpp  test_scalar.cpp  test_smoother_grid.cpp  test_spatial_hash.cpp  test_umbrella.cpp  test_vec.cpp
